--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.0.1",
   "description": "Subscribe to modifications to parts of your codebase",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "author": "Francisco Jordano <francisco@jordano.es>",
   "license": "MPL",
   "dependencies": {
+    "body-parser": "^1.6.4",
     "diff-parse": "0.0.13",
     "express": "^4.7.2",
     "promise": "^5.0.0",
