--- a/package.json
+++ b/package.json
@@ -14,6 +14,16 @@
     "promise": "^5.0.0",
     "promised-mongo": "^0.11.1",
     "request": "^2.39.0",
-    "then-couchdb": "^0.4.4"
+    "then-couchdb": "^0.4.4",
+    "passport-github": "~0.1.5",
+    "passport": "~0.2.0",
+    "morgan": "~1.2.3",
+    "cookie-parser": "~1.3.2",
+    "method-override": "~2.1.3",
+    "express-session": "~1.7.6"
+  },
+  "devDependencies": {
+    "mocha": "~1.21.4",
+    "chai": "~1.9.1"
   }
 }
