--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "morgan": "~1.2.3",
     "cookie-parser": "~1.3.2",
     "method-override": "~2.1.3",
-    "express-session": "~1.7.6"
+    "express-session": "~1.7.6",
+    "connect-mongo": "~0.4.1"
   },
   "devDependencies": {
     "mocha": "~1.21.4",
