--- a/package.json
+++ b/package.json
@@ -25,6 +25,11 @@
   },
   "devDependencies": {
     "mocha": "~1.21.4",
-    "chai": "~1.9.1"
+    "chai": "~1.9.1",
+    "grunt": "~0.4.5",
+    "grunt-express-server": "~0.4.19",
+    "grunt-parallel": "~0.3.1",
+    "grunt-contrib-watch": "~0.6.1",
+    "load-grunt-tasks": "~0.6.0"
   }
 }
