--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "cookie-parser": "~1.3.2",
     "method-override": "~2.1.3",
     "express-session": "~1.7.6",
-    "connect-mongo": "~0.4.1"
+    "connect-mongo": "~0.4.1",
+    "nodemailer": "~1.2.1"
   },
   "devDependencies": {
     "mocha": "~1.21.4",
