--- a/package.json
+++ b/package.json
@@ -9,20 +9,21 @@
   "license": "MPL",
   "dependencies": {
     "body-parser": "^1.6.4",
+    "connect-mongo": "~0.4.1",
+    "cookie-parser": "~1.3.2",
     "diff-parse": "0.0.13",
     "express": "^4.7.2",
+    "express-handlebars": "^1.0.1",
+    "express-session": "~1.7.6",
+    "method-override": "~2.1.3",
+    "morgan": "~1.2.3",
+    "nodemailer": "~1.2.1",
+    "passport": "~0.2.0",
+    "passport-github": "~0.1.5",
     "promise": "^5.0.0",
     "promised-mongo": "^0.11.1",
     "request": "^2.39.0",
-    "then-couchdb": "^0.4.4",
-    "passport-github": "~0.1.5",
-    "passport": "~0.2.0",
-    "morgan": "~1.2.3",
-    "cookie-parser": "~1.3.2",
-    "method-override": "~2.1.3",
-    "express-session": "~1.7.6",
-    "connect-mongo": "~0.4.1",
-    "nodemailer": "~1.2.1"
+    "then-couchdb": "^0.4.4"
   },
   "devDependencies": {
     "mocha": "~1.21.4",
