--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-session": "~1.7.6",
     "method-override": "~2.1.3",
     "morgan": "~1.2.3",
+    "nconf": "^0.6.9",
     "nodemailer": "~1.2.1",
     "passport": "~0.2.0",
     "passport-github": "~0.1.5",
