--- a/package.json
+++ b/package.json
@@ -27,12 +27,13 @@
     "then-couchdb": "^0.4.4"
   },
   "devDependencies": {
-    "mocha": "~1.21.4",
+    "bower": "^1.3.9",
     "chai": "~1.9.1",
     "grunt": "~0.4.5",
+    "grunt-contrib-watch": "~0.6.1",
     "grunt-express-server": "~0.4.19",
     "grunt-parallel": "~0.3.1",
-    "grunt-contrib-watch": "~0.6.1",
-    "load-grunt-tasks": "~0.6.0"
+    "load-grunt-tasks": "~0.6.0",
+    "mocha": "~1.21.4"
   }
 }
