--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "passport-github": "~0.1.5",
     "promise": "^5.0.0",
     "promised-mongo": "^0.11.1",
-    "request": "^2.39.0",
-    "then-couchdb": "^0.4.4"
+    "request": "^2.39.0"
   },
   "devDependencies": {
     "bower": "^1.3.9",
